# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiignore  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .travis.yml  .yamllint  .zshrc  AGENTS.md  CHANGELOG.md  Dockerfile  FEDORA.txt  GEMINI.md  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  TODO.txt  UBUNTU.txt  android-sys.yml  android.yml  ansible.cfg  boot.sh  cli-sys.yml  cli-user.yml  cli.yml  clojure-sys.yml  clojure-user.yml  data-sys.yml  data-user.yml  data.yml  dot_duckdbrc  dot_editrc  dot_gitconfig.tmpl  dot_gitignore  dot_inputrc  dot_npmrc  dot_pypirc  (+52 more)
.gemini/: settings.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  docker.yml
.hooks/: pre-commit
ag/: agignore
aliases/: aliases
ansible/: ansible.cfg
applications/: extra.yml
applications/anki/: sys.yml
applications/chrome/: sys.yml
applications/cirkuit/: sys.yml
applications/deja-dup/: sys.yml
applications/fedora/: rpmfusion-free-updates-testing.repo  rpmfusion-free-updates.repo  rpmfusion-nonfree-updates-testing.repo  rpmfusion-nonfree-updates.repo  rpmfusion-nonfree.repo  sys.yml
applications/firefox/: sys.yml
applications/gnome/: sys.yml  user.yml
applications/insync/: insync.repo  sys.yml
applications/kde/: sys.yml
applications/keepassx/: sys.yml
applications/mendeley/: sys.yml
applications/nextcloud/: sys.yml
applications/skype/: sys.yml
applications/steam/: steam.repo  sys.yml
applications/teamviewer/: sys.yml
autoenv/: venv-activate  venv-deactivate
bash/: bash_aliases  bash_logout  bashrc  profile
byobu/: .tmux.conf  keybindings.tmux  status  tmux.conf
clojure/: boot.properties
cookiecutter/: cookiecutterrc
cookiecutters/: cookiecutterrc
dot/: .golangci.yml  agent.go  agent_test.go  ai.go  ai_test.go  browser.go  chezmoi.go  chezmoi_safety_test.go  chezmoi_test.go  cli.go  cluster.go  cluster_test.go  commands_test.go  commit.go  commit_test.go  completion.go  completion_test.go  concurrency_test.go  config.go  config_test.go  dprint.json  env.go  errors.go  exec.go  exec_process_other.go  exec_process_unix.go  exec_process_unix_test.go  exec_test.go  git.go  git_test.go  go.mod  go.sum  helpers_test.go  login.go  login_test.go  mise.toml  pr.go  pr_test.go  prompt.go  pull.go  (+17 more)
dot_agents/: AGENTS.md  symlink_skills.tmpl
dot_claude/: settings.json  symlink_skills.tmpl
dot_codex/: modify_private_config.toml  private_config.toml.tmpl
dot_config/: shellcheckrc  starship.toml
dot_copilot/: config.json  settings.json  symlink_copilot-instructions.md.tmpl
dot_gemini/: GEMINI.md  settings.json  symlink_GEMINI.md.tmpl
dot_kube/: color.yaml  kuberc
dot_skaffold/: config
emacs/: .#spacemacs  emacs.desktop  install-emacs.sh  spacemacs  spacemacs.elc
environ/: environ
git/: gitconfig  gitignore
idea/: ideavimrc
input/: inputrc
kde/: Freaxmind.khotkeys
keyboard/: hello
lein/: profiles.clj
librairies/: python.txt
neovim/: init.vim  vimrc_bak
python/: cookiecutterrc  flake8
shell/: aliases  display  environ  shellrc
silversearcher/: agignore
skills/python-stack/references/: AGENTS.md  conftest.py  env.example  gitignore  init-cli.py  init.py  lefthook.yml  mise.toml  pyproject.toml  script.py  test_smoke.py
sublime-text-3/: Package Control.sublime-settings
tasks/: __init__.py  docker.py  install.py
tex/: latexmkrc
tmuxp/: py.yaml  serval.yaml
vim/: vim.old  vimrc  vimrc.py
xfce/: terminalrc  xfce4-keyboard-shortcuts.xml
xonsh/: xonshrc
zsh/: face.icon  freaxmind.zsh-theme  inputrc  tmux.conf  zshenv  zshrc
(+1170 files in other folders)
